[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/case_08/fr8_final_report_a.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bc6epa3jyjbri" path="res://ui/theme_terminal_amber.tres" id="2_theme"]
[ext_resource type="Shader" path="res://ui/shaders/crt_overlay.gdshader" id="3_shader"]
[ext_resource type="PackedScene" path="res://scenes/ui/TagPileZone.tscn" id="4_pile"]

[sub_resource type="ShaderMaterial" id="1_overlay_material"]
shader = ExtResource("3_shader")
shader_parameter/tint_color = Color(1, 0.7, 0.1, 1)
shader_parameter/intensity = 0.13
shader_parameter/fx_quality = 0
shader_parameter/glitch_strength = 0.0

[node name="FR8_FinalReportA" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.06, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="CRT_Overlay" type="ColorRect" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("1_overlay_material")
color = Color(1, 1, 1, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="MainLayout" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="SafeArea/MainLayout"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnBack" type="Button" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(116, 56)
layout_mode = 2
text = "НАЗАД"

[node name="TitleLabel" type="Label" parent="SafeArea/MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ДЕЛО #8"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StabilityBar" type="ProgressBar" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(210, 24)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="BriefingCard" type="PanelContainer" parent="SafeArea/MainLayout"]
layout_mode = 2

[node name="BriefingLabel" type="Label" parent="SafeArea/MainLayout/BriefingCard"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "Briefing"
autowrap_mode = 3

[node name="Body" type="BoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="FragmentsCard" type="PanelContainer" parent="SafeArea/MainLayout/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0

[node name="CardVBox" type="VBoxContainer" parent="SafeArea/MainLayout/Body/FragmentsCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="FragmentsTitle" type="Label" parent="SafeArea/MainLayout/Body/FragmentsCard/CardVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "СКЛАД ФРАГМЕНТОВ"

[node name="PileZone" parent="SafeArea/MainLayout/Body/FragmentsCard/CardVBox" instance=ExtResource("4_pile")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EditorCard" type="PanelContainer" parent="SafeArea/MainLayout/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="CardVBox" type="VBoxContainer" parent="SafeArea/MainLayout/Body/EditorCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="EditorTitle" type="Label" parent="SafeArea/MainLayout/Body/EditorCard/CardVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "РЕДАКТОР"

[node name="CodePreviewCard" type="PanelContainer" parent="SafeArea/MainLayout/Body/EditorCard/CardVBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_horizontal = 3

[node name="CodePreview" type="RichTextLabel" parent="SafeArea/MainLayout/Body/EditorCard/CardVBox/CodePreviewCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[code]S1 ____[/code]"
fit_content = false
scroll_active = false

[node name="SlotsTitle" type="Label" parent="SafeArea/MainLayout/Body/EditorCard/CardVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SLOTS"

[node name="SlotsGrid" type="GridContainer" parent="SafeArea/MainLayout/Body/EditorCard/CardVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="BottomBar" type="HBoxContainer" parent="SafeArea/MainLayout"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "Status"
autowrap_mode = 2
vertical_alignment = 1

[node name="BtnReset" type="Button" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(150, 56)
layout_mode = 2
text = "СБРОС"

[node name="BtnConfirm" type="Button" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(220, 56)
layout_mode = 2
text = "ПОДТВЕРДИТЬ"
